--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,23 +5,35 @@
   <meta charset="utf-8">
   <title>Daily Journal</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
   <!-- CSS only -->
-<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"> -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/styles.css">
-  <nav class="navbar navbar-default">
+
+
+  <nav class="navbar navbar-default" style="background-color: #eee;">
     <div class="container">
       <div class="navbar-header">
         <p class="navbar-brand">DAILY JOURNAL</p>
       </div>
-        <ul class="nav navbar-nav navbar-right">
-          <!-- 6 -->
-          <li id="home"><a href="/">HOME</a></li>
-          <li id="about"><a href="/about">ABOUT US</a></li>
-          <li id="contact"><a href="/contact">CONTACT US</a></li>
-        </ul>
+      <ul class="nav nav-tabs">
+        <li class="nav-item">
+          <a class="nav-link " aria-current="page" href="/"><h5>Home</h5></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page"  href="/about"><h5>About Me</h5></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/contact"><h5>Contact</h5></a>
+        </li>
+      </ul>
     </div>
   </nav>
 
-  <body>
-    <div class="container">
+
+
+  
+
+<body>
+  <div class="container">
