--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,9 +24,9 @@
         <li class="nav-item">
           <a class="nav-link" aria-current="page"  href="/about"><h5>About Me</h5></a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="/contact"><h5>Contact</h5></a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </nav>
