--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,6 +1,19 @@
 <%- include('partials/header') %>
 
-<h1>Contact</h1>
-<p><%= contactContent %></p>
+<div class="contacts">
+    <div>
+        <b>Email</b>
+        <a href=""></a>
+    </div>
+    <div>
+        <b>LinkedIn</b>
+        <a href="">LinkedIn</a>
+    </div>
+    <div>
+        <b>Github</b>
+        <a href="">Github</a>
+    </div>
+</div>
+
 
 <%- include('partials/footer') %>
